--- a/index.html
+++ b/index.html
@@ -22,19 +22,6 @@
                   <li class="nav-item ">
                     <a class="nav-link  active"  aria-current="page" href="./index.html">Inicio</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Sobre Nosotros</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Perfil
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="./pages/perfil.html">Ver Perfil</a></li>
-                      <li><a class="dropdown-item" href="#">Configuracion</a></li>
-                      <li><a class="dropdown-item" href="#">Cerrar Sesión</a></li>
-                    </ul>
-                  </li>
 
                 </ul>
                 <form class="d-flex">
@@ -118,8 +105,8 @@
         </button>
         </div>
        </div>
-       <div>
-        <p>haga clicck en "+" si quiere cargar un producto</p>
+       <div class="d-flex align-items-center justify-content-center m-3">
+        <p class="display-5">haga clicck en "+" si quiere cargar un producto</p>
       </div>
        </section>
         
